<resources>
        <string name="app_name">AB Music</string>
        <string name="music_is_life">Music is love, Music is life!</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="okay">Okay</string>
        <string name="cancel">Cancel</string>
        <string name="yes">Yes</string>
        <string name="add">Add</string>
        <string name="no">No</string>
        <string name="reset">Reset</string>
        <string name="are_u_sure">Are you sure?</string>
        <string name="licenses">Licenses</string>
        <string name="added_to_q">Added to queue\u0020 </string>
        <string name="playing_next">Playing next\u0020 </string>
        <string name="track">track</string>
        <string name="tracks">\u0020tracks</string>
        <string name="albums">\u0020albums</string>
        <string name="create_playlist">Create new playlist</string>
        <string name="enable_now">Enable Now</string>
        <string name="tab_album">Album</string>
        <string name="tab_track">Track</string>
        <string name="tab_artist">Artist</string>
        <string name="tab_genre">Genre</string>
        <string name="tab_playlist">Playlist</string>
        <string name="tab_folder">Folder</string>
        <string name="tab_title">Title</string>
        <string name="track_count">%1$s tracks</string>
        <string name="empty_playlist">empty playlist</string>
        <string name="share_playlist">Share tracks</string>
        <string name="user_playlists">User playlists</string>
        <string name="system_playlists">System playlists</string>
        <string name="nav_remove_ads">Remove Ads</string>
        <string name="nav_rewards">Rewards</string>
        <string name="nav_sleep_timer">Sleep Timer</string>
        <string name="nav_share">Share</string>
        <string name="nav_rate">Rate in store</string>
        <string name="nav_feature_request">Feature Request</string>
        <string name="nav_social">We are Social!</string>
        <string name="nav_website">Visit Website</string>
        <string name="nav_settings">Settings</string>
        <string name="nav_logout">Sign Out</string>
        <string name="nav_login">Sign Up</string>
        <string name="menu_search">Search</string>
        <string name="menu_sort_by">Sort by</string>
        <string name="action_play">Play</string>
        <string name="action_add_to_playlist">Add to Playlist</string>
        <string name="action_edit_track_info">Edit Track info</string>
        <string name="action_clear_offline_lyrics">Clear Lyrics</string>
        <string name="action_wrong_lyrics">Alternate Lyric Source</string>
        <string name="action_add_lyrics">Add Lyrics</string>
        <string name="action_share_offline_lyrics">Share Lyrics</string>
        <string name="action_switch_offline_lyrics">Switch Lyrics Mode</string>
        <string name="action_exclude_from_library">Exclude from library</string>
        <string name="action_edit_info">Edit info</string>
        <string name="action_track_info">Track info</string>
        <string name="action_share_file">Share music file</string>
        <string name="action_delete">Delete</string>
        <string name="action_ringtone_cutter">Ringtone Cutter</string>
        <string name="action_go_to_artist">Go to Artist</string>
        <string name="action_go_to_album">Go to Album</string>
        <string name="action_fav">Fav</string>
        <string name="action_equ">Equalizer</string>
        <string name="action_play_next">Play Next</string>
        <string name="action_add_to_q">Add to Queue</string>
        <string name="action_set_as_ringtone">Set as Ringtone</string>
        <string name="action_settings">Settings</string>
        <string name="action_shuffle_all">Shuffle All</string>
        <string name="action_refresh_library">Refresh Library</string>
        <string name="action_save">Save</string>
        <string name="action_share">Share</string>
        <string name="action_sync_problem">Sync problem?</string>
        <string name="action_reload">Reload</string>
        <string name="action_call_for_help">Call for help *new*</string>
        <string name="action_licenses">Licenses</string>
        <string name="action_terms_of_use">Terms of Use</string>
        <string name="action_feedback">Provide Feedback</string>
        <string name="action_support_dev">Support Development</string>
        <string name="action_sort_name">By Name</string>
        <string name="action_sort_year">By Year"</string>
        <string name="action_sort_size">By Size</string>
        <string name="action_sort_no_of_album">By No. of Albums</string>
        <string name="action_sort_no_of_tracks">By No. of Tracks</string>
        <string name="action_sort_by_duration">By Duration</string>
        <string name="action_sort_asc">Asc</string>
        <string name="abm_song_name_mini_player">Empty queue</string>
        <string name="abm_title">Library</string>
        <string name="invite_text">Invite one of your friend to AB Music and enjoy ad-free experience lifetime. \n\n
            Please note, invitation is successful only on new install. If person you invited already has AB Music installed, it will not work.
        </string>
        <string name="invite_friends_title">Invite Friends</string>
        <string name="invitation_sent">Invitation sent</string>
        <string name="invite_more">Invite More</string>
        <string name="invite_now">Invite Now</string>
        <string name="error_invitation_not_sent">Invitation not sent, Please try again!</string>
        <string name="pref_sent_invittions">pref_sent_invitations</string>
        <string name="referral_succeessful">Referral successful! You can remove ads for free by referring one of your friend to AB Music.</string>
        <string name="main_act_empty_lib">No Music found in Library!</string>
        <string name="main_act_lib_refreshed">Library Refreshed</string>
        <string name="playlist_error_1">Playlist name cannot begin with digit</string>
        <string name="playlist_error_2">Enter at least 3 characters</string>
        <string name="playlist_error_3">Only alphanumeric characters allowed</string>
        <string name="error_opening_browser">Unable to open browser!</string>
        <string name="sleep_timer_discarded">Sleep timer discarded</string>
        <string name="sleep_timer_successfully_set">Music will be stopped in \u0020</string>
        <string name="nothing_to_play">Nothing to play!</string>
        <string name="music_is_locked">Music is Locked!</string>
        <string name="empty_track_list">Empty Track List</string>
        <string name="empty_play_list">Empty Play List</string>
        <string name="play_list_created">Playlist created</string>
        <string name="play_list_already_exists">Playlist already exists</string>
        <string name="playlist_saved">Playlist saved</string>
        <string name="signed_out">Signed out</string>
        <string name="network_error">Network Error, try again later!</string>
        <string name="unknown_error">Unknown Error, try again later!</string>
        <string name="error_invalid_url">Invalid URL!</string>
        <string name="art_info_not_available">Artist info not available at the moment, try again later</string>
        <string name="lyrics_saved">Lyrics saved</string>
        <string name="lyrics_removed">Lyrics Removed</string>
        <string name="main_act_sleep_timer_title">Sleep Timer</string>
        <string name="title_reward_points">Reward points!</string>
        <string name="nav_lyric_cards">Lyric Cards</string>
        <string name="title_remove_ads">Remove Ads</string>
        <string name="title_text_font">Font</string>
        <string name="title_misc">Miscellaneous</string>
        <string name="title_try_my_new_app">AB Remote Wallpaper</string>
        <string name="title_continous_playback">Continuous Playback</string>
        <string name="title_batch_download">Batch Lyrics Download</string>
        <string name="title_hide_lock_button">Hide Music Lock Button</string>
        <string name="title_notification">Notifications</string>
        <string name="title_opening_tab">Manage Tabs</string>
        <string name="title_reset_pref">Reset Preferences to Default</string>
        <string name="title_hide_tracks_starting_with">Hide Tracks Starting With</string>
        <string name="title_excluded_folders">Excluded Folders</string>
        <string name="title_theme_color">Theme</string>
        <string name="title_now_playing_back">Now Playing Background</string>
        <string name="title_main_library_back">Main Library Background</string>
        <string name="title_nav_back">Side Navigation Background</string>
        <string name="title_shake_action">Shake will</string>
        <string name="title_shake">Shake Control</string>
        <string name="title_shake_main">Shake</string>
        <string name="title_library">Library</string>
        <string name="title_about">About</string>
        <string name="title_reset">Reset</string>
        <string name="title_find_me_on_instagram">Let\'s be Friends</string>
        <string name="title_instant_lyric">Instant Lyrics</string>
        <string name="title_ui">User Interface</string>
        <string name="title_theme_category">AB Music theme</string>
        <string name="title_lock_screen_album_Art">Lock Screen Album Art</string>
        <string name="title_about_us">About </string>
        <string name="title_album_lib_view">Album Library View</string>
        <string name="title_hide_short_clips">Hide Audio Tracks Shorter Than</string>
        <string name="title_equalizer">Prefer System Equalizer</string>
        <string name="title_data_Saver">Data Saver</string>
    <string name="nav_developers_message">Developers Message</string>
    <string name="nav_explore_lyrics">Search Lyrics</string>
    <string name="title_search_youtube">Search Youtube</string>
        <string name="pref_data_saver">pref_data_saver</string>
        <string name="pref_continuous_playback">pref_continuous_playback</string>
        <string name="pref_hide_short_clips">pref_hide_short_clips</string>
        <string name="pref_album_lib_view">pref_album_lib_view</string>
        <string name="pref_about_us">pref_click_about</string>
        <string name="pref_lock_screen_album_Art">lock_screen_art</string>
        <string name="pref_shake">shake_status</string>
        <string name="pref_shake_action">shake_action</string>
        <string name="pref_theme_color">primary_color</string>
        <string name="pref_now_playing_back">pref_now_playing_back</string>
        <string name="pref_main_library_back">pref_main_library_back</string>
        <string name="pref_nav_library_back">pref_nav_back</string>
        <string name="pref_hide_tracks_starting_with">hide_tracks_starting_with</string>
        <string name="pref_reset_pref">reset_pref</string>
        <string name="pref_opening_tab">opening_tab</string>
        <string name="pref_text_font">text_font</string>
        <string name="pref_instant_lyric">pref_instant_lyric</string>
        <string name="pref_excluded_folders">pref_excluded_folders</string>
        <string name="pref_hide_lock_button">hide_music_lock_button</string>
        <string name="pref_notifications">hide_notifications</string>
        <string name="pref_remove_ads_after_payment">remove_ad</string>
        <string name="pref_batch_download">batch_download</string>
        <string name="pref_prefer_system_equ">pref_prefer_system_equ</string>
        <string name="nav_default_album_art">Default Album Art</string>
        <string name="pref_default_album_art">pef_default_album_art</string>
        <string name="summary_pref_theme">Tap to choose theme</string>
</resources>