<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="none">


        <item
            android:id="@+id/nav_lyric_card"
            android:icon="@drawable/ic_photo_black_24dp"
            android:title="@string/nav_lyric_cards" />

        <item
            android:id="@+id/nav_try_new_app"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/title_try_my_new_app" />

        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_reward"
            android:title="@string/nav_rewards" />


        <item
            android:id="@+id/nav_remove_ads"
            android:icon="@drawable/ic_remove_circle_outline_black_24dp"
            android:title="@string/nav_remove_ads" />


        <item
            android:id="@+id/nav_explore_lyrics"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/nav_explore_lyrics" />



        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/nav_share" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/nav_feature_request" />

        <item
            android:id="@+id/nav_dev_message"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_developers_message" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/nav_rate" />

        <item
            android:id="@+id/nav_instagram"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_find_me_on_instagram" />

        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_login" />

    </group>
</menu>
