<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:tint="#FFFFFF"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort_by"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom"
        android:tint="#FFFFFF"
        />


    <item
        android:id="@+id/action_equ"
        android:icon="@drawable/ic_assessment_black_24dp"
        app:showAsAction="never"
        android:title="@string/action_equ" />

    <item
        android:id="@+id/action_sleep_timer"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/main_act_sleep_timer_title"
        app:showAsAction="never"
        android:tint="#FFFFFF"/>



    <item
        android:id="@+id/action_refresh"
        app:showAsAction="never"
        android:title="@string/action_refresh_library" />


    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:orderInCategory="200"
        android:icon="@drawable/ic_search_white_48dp"
        app:showAsAction="always"
        android:tint="#FFFFFF"
        />



</menu>
